# silk4j

./: README.MD  build.gradle  settings.gradle
.github/cross_build/: action.yml
.github/workflows/: cross_build.yml  gradle.yml  native_build.yml
cross/: build.sh  setup_docker.sh
native/: CMakeLists.txt
native/bind/: JNIDecoder.c  JNIDecoder.cpp  JNIEncoder.c  JNIEncoder.cpp  JNIdecoder.cpp  coder.c  coder.h
native/lame/: CMakeLists.txt
native/lame/src/: JNILame.c  JNILame.cpp  JNILame.h
native/lame/src/libmp3lame/: VbrTag.c  VbrTag.h  bitstream.c  encoder.c  gain_analysis.c  id3tag.c  id3tag.h  lame.h  machine.h  mpglib_interface.c  tables.c  util.h
native/lame/src/mpglib/: decode_i386.c  layer2.c  mpg123.h
src/main/java/io/github/mzdluo123/silk4j/: AudioUtils.java  LameBuilder.java  LameCoder.java  NativeLibLoader.java  SilkCoder.java
src/test/java/io/github/mzdluo123/silk4j/test/: CoderTest.java  LoadTest.java
src/test/resources/: 77b18b66-e4d5-4847-8c44-cad582d75ad4.silk
